packages/llvm/src/tests/snapshots/llvm__tests__const x = !((!true)).snap
---
source: packages/llvm/src/tests/mod.rs
expression: actual_output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %x = alloca i64, align 8
  store i64 1, i64* %x, align 4
  ret void
}

